--- a/startopdracht/index.html
+++ b/startopdracht/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -10,9 +11,38 @@
     <link rel="stylesheet" href="./css/style.css">
 
     <title>Hello, world!</title>
-  </head>
-  <body>
-    <!-- Your code goes here-->
-    <h1>Hello World!</h1>
-  </body>
+</head>
+
+<body>
+
+    <div class="hero">hero
+        <header>
+            <div class="container d-flex justify-content-space-between">
+                <img src="img/logo_white.svg" alt="">
+                <nav>
+                    <a href="index.html">home</a>
+                    <a href="over-ons-html">Over Ons</a>
+                    <a href="Eetcafé.html">Eetcafé</a>
+
+                </nav>
+            </div>
+        </header>
+        <div class="container banaan">
+            <div class="video">
+                hier komt de video....
+            </div>
+        </div>
+        <div class="social-shit">
+            <div class="left">left</div>
+            <div class="right">right</div>
+        </div>
+    </div>
+    <section class="passie">
+        <div class="container d-flex two-columns">
+            <div class="left">1</div>
+            <div class="right">2</div>
+        </div>
+    </section>
+</body>
+
 </html>
