--- a/startopdracht/index.html
+++ b/startopdracht/index.html
@@ -53,7 +53,7 @@
                 <p>Daarnaast heeft een plantaardige levensstijl met biologische en lokale producten, een minimale belasting op het ecosysteem. Al onze gerechten zijn biologisch, onbewerkt en bovenal ambachtelijk bereid. Deze verwerkingsmethode verzekert
                     het behoud van de voedingswaarde van het voedsel en het behoud van natuurlijke essentie en smaak van de ingrediënten. Wij weten uit ervaring hoe voeding je geest kan scherpen, je lichaam in vorm kan houden en je jong en energiek kan
                     doen voelen. Deze ervaring willen we het liefst met iedereen delen. Niet voor niets noemen wij onszelf The Healthiest Place in Town.</p>
-                <a href="" class="button">Lees Meer Druk hierk</a>
+                <a href="" class="button">Lees Meer Druk hier</a>
             </div>
         </div>
     </section>
