--- a/startopdracht/index.html
+++ b/startopdracht/index.html
@@ -8,6 +8,8 @@
 
     <!-- Own CSS -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+
+
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/mobile.css">
 
@@ -30,13 +32,13 @@
 
         <div class="container banaan">
             <div class="video">
-                hier komt de video....
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/dChIO96qyeM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </div>
 
-        <div class="social-shit">
+        <div class="social-shit two-columns d-flex">
             <div class="left">links</div>
-            <div class="right">rechts</div>
+            <div class="right text-align-right">rechts</div>
         </div>
 
     </div>
@@ -53,10 +55,126 @@
                 <p>Daarnaast heeft een plantaardige levensstijl met biologische en lokale producten, een minimale belasting op het ecosysteem. Al onze gerechten zijn biologisch, onbewerkt en bovenal ambachtelijk bereid. Deze verwerkingsmethode verzekert
                     het behoud van de voedingswaarde van het voedsel en het behoud van natuurlijke essentie en smaak van de ingrediënten. Wij weten uit ervaring hoe voeding je geest kan scherpen, je lichaam in vorm kan houden en je jong en energiek kan
                     doen voelen. Deze ervaring willen we het liefst met iedereen delen. Niet voor niets noemen wij onszelf The Healthiest Place in Town.</p>
-                <a href="" class="button">Lees Meer Druk hier</a>
+                <a href="" class="button">Lees Meer Druk hierk</a>
             </div>
         </div>
     </section>
+
+
+    <section class="eetcafe">
+        <div class="container">
+            <img src="img/eetcafe.jpg" class="img-fluid">
+        </div>
+    </section>
+
+
+    <section class="take-away">
+        <div class="container two-columns d-flex">
+            <div class="left text-align-right">
+                <h3>Eetcafe</h3>
+                <p>Bij Crudo kunt u terecht voor een fair kopje Moyee koffie of thee met een “guilt free” stuk taart, vers geperste juices en smoothies en een heerlijke lunch of diner. Alle huisgemaakte gerechten zijn 100% plantaardig, maar ook biologisch,
+                    glutenvrij, lactosevrij en suikervrij. Neem ook gerust je laptop mee en maak gebruik van het open Wi-Fi-netwerk.</p>
+                <h4>Take-Away</h4>
+                <p>Alles op onze kaart is ook To Go, liefst in je eigen meegebrachte verpakking. Ook voor de juices en smoothies kun je je eigen beker meenemen. Geniet van heerlijk verse producten die je een energieboost geven voor de rest van je dag!</p>
+                <a href="#" class="button">
+          Bekijk het Menu
+        </a>
+            </div>
+            <div class="right">
+                <img src="img/koffie.jpg" class="img-fluid">
+            </div>
+        </div>
+    </section>
+
+
+    <section class="banaan2">
+        <div class="container">
+            <img src="img/winkel.jpg" class="img-fluid">
+        </div>
+    </section>
+
+
+    <section class="winkel">
+        <div class="container two-columns d-flex">
+            <div class="left">
+                <h3>Winkel</h3>
+                <p>In onze winkel vind je alles wat je nodig hebt voor het bereiden van lekker plantaardig eten thuis. De lekkere en gezonde alternatieven voor dierlijke producten waar je in ons eetcafé van geniet zijn te verkrijgen in de winkel. We hebben
+                    een gedeelte met biologische en fair zero-waste producten die je tapt uit silo’s. De verpakking neem je zelf mee. Op deze manier houden we de belasting op het ecosysteem zo laag mogelijk.</p>
+                <img src="img/bessen.jpg" class="img-fluid">
+            </div>
+            <div class="right">
+                <img src="img/tomaat.jpg" class="img-fluid">
+                <h3>TARWEGRAS & SUPPLEMENTEN</h3>
+                <p>Uit eigen ervaring weten wij dat tarwegras de nummer één op het gebied van gezonde voeding is. We verkopen diverse tarwegras producten, van één vers geperst shot tot een abonnement voor dagelijks vers tarwegras. In de winkel vind je tevens
+                    de meest essentiële voedingssupplementen.</p>
+                <p>Daarnaast verkopen we aardingsproducten. Deze artikelen gaan terug naar het basisprincipe van je gezondheid: het letterlijk geaard zijn.</p>
+            </div>
+        </div>
+    </section>
+
+
+    <section class="gember">
+        <div class="container">
+            <img src="img/menu.jpg" class="img-fluid">
+        </div>
+    </section>
+
+
+    <section class="price-table">
+        <div class="container d-flex two-columns">
+            <div class="left">
+
+                <table>
+                    <tr>
+                        <td>DUTCH WEEDBURGER</td>
+                        <td>€14,95</td>
+                    </tr>
+                    <tr>
+                        <td>DUTCH WEEDBURGER</td>
+                        <td>€14,95</td>
+                    </tr>
+                    <tr>
+                        <td>DUTCH WEEDBURGER</td>
+                        <td>€14,95</td>
+                    </tr>
+                    <tr>
+                        <td>DUTCH WEEDBURGER</td>
+                        <td>€14,95</td>
+                    </tr>
+                </table>
+
+            </div>
+            <div class="right">
+
+                <table>
+                    <tr>
+                        <td>DUTCH WEEDBURGER</td>
+                        <td>€14,95</td>
+                    </tr>
+                    <tr>
+                        <td>DUTCH WEEDBURGER</td>
+                        <td>€14,95</td>
+                    </tr>
+                    <tr>
+                        <td>DUTCH WEEDBURGER</td>
+                        <td>€14,95</td>
+                    </tr>
+                    <tr>
+                        <td>DUTCH WEEDBURGER</td>
+                        <td>€14,95</td>
+                    </tr>
+                </table>
+
+            </div>
+        </div>
+
+        <div class="container text-align-center">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia placeat aspernatur alias! Id autem atque officia deleniti dolor temporibus cum asperiores, deserunt tempore sed architecto recusandae tenetur laborum! Sequi, accusantium!</p>
+            <a href="" class="btn">Bekijk de volledige menu kaart</a>
+        </div>
+    </section>
+
+
 
 
     <footer>
